[package]
name = "binance-hft-bot"
version = "0.1.0"
edition = "2021"
description = "Ultra-low latency Binance Futures altcoin breakout trading bot"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
crossbeam-channel = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
anyhow = "1"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
csv = "1"
ratatui = "0.29"
crossterm = "0.28"

# ── Binary targets ───────────────────────────────────────────────
[[bin]]
name = "binance-hft-bot"
path = "src/main.rs"

[[bin]]
name = "dashboard"
path = "src/dashboard.rs"

# ── Release profile: maximum throughput ──────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
